--- a/app/src/main/res/layout/activity_posture.xml
+++ b/app/src/main/res/layout/activity_posture.xml
@@ -10,11 +10,22 @@
         android:id="@+id/tvPosture"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="posture"
+        android:text="posture page"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/tvPostureStatusMessage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Status Message for Debug"
+        app:layout_constraintBottom_toTopOf="@id/bStart"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvPosture"
+        android:textColor="#F44336"/>
 
     <Button
         android:id="@+id/bStart"
@@ -25,5 +36,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvPosture" />
+
+    <Button
+        android:id="@+id/bHome"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Home Page"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/bStart" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
