--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,10 +21,20 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Posture Page"
-        app:layout_constraintBottom_toTopOf="@id/bLogout"
+        app:layout_constraintBottom_toTopOf="@id/bCalibrationPage"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+    <Button
+        android:id="@+id/bCalibrationPage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Calibration Page"
+        app:layout_constraintBottom_toTopOf="@+id/bLogout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/bPosturePage" />
 
     <Button
         android:id="@+id/bLogout"
