--- a/app/src/main/res/layout/activity_posture.xml
+++ b/app/src/main/res/layout/activity_posture.xml
@@ -7,10 +7,10 @@
     tools:context=".PostureActivity">
 
     <TextView
-        android:id="@+id/tvPosture"
+        android:id="@+id/tvCurrentPosture"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="posture page"
+        android:text="Posture"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -24,7 +24,7 @@
         app:layout_constraintBottom_toTopOf="@id/bStart"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvPosture"
+        app:layout_constraintTop_toBottomOf="@id/tvCurrentPosture"
         android:textColor="#F44336"/>
 
     <Button
@@ -35,7 +35,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvPosture" />
+        app:layout_constraintTop_toBottomOf="@+id/tvCurrentPosture" />
 
     <Button
         android:id="@+id/bHome"
