--- a/app/src/main/res/layout/activity_calibration.xml
+++ b/app/src/main/res/layout/activity_calibration.xml
@@ -15,7 +15,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.87" />
+        app:layout_constraintVertical_bias="0.709" />
 
     <TextView
         android:id="@+id/tvCalibPosture"
@@ -23,9 +23,27 @@
         android:layout_height="wrap_content"
         android:text=""
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.259" />
+
+    <ImageView
+        android:id="@+id/postureImage"
+        android:layout_width="410dp"
+        android:layout_height="276dp"
+        android:layout_weight="1.04"
+        android:adjustViewBounds="true"
+        android:background="#66FFFFFF"
+        android:maxWidth="47dip"
+        android:maxHeight="91dip"
+        android:padding="10dip"
+        android:src="@drawable/placeholder1"
+        app:layout_constraintBottom_toTopOf="@+id/bStartCalibration"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvCalibPosture" />
 
     <Button
         android:id="@+id/bStartCalibration"
@@ -34,21 +52,12 @@
         android:text="Start Calibration"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvCalibPosture" />
+        app:layout_constraintTop_toBottomOf="@+id/tvCalibPosture"
+        app:layout_constraintVertical_bias="0.738" />
 
-    <Button
-        android:id="@+id/bStartCollection"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Ready"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvCalibPosture" />
-
-<!--    <TextView-->
+    <!--    <TextView-->
 <!--        android:id="@+id/tvCountdown"-->
 <!--        android:layout_width="wrap_content"-->
 <!--        android:layout_height="wrap_content"-->
@@ -58,6 +67,19 @@
 <!--        app:layout_constraintEnd_toEndOf="parent"-->
 <!--        app:layout_constraintStart_toStartOf="parent"-->
 <!--        app:layout_constraintTop_toBottomOf="@+id/tvCalibPosture" />-->
+
+    <Button
+        android:id="@+id/bStartCollection"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Ready"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/calibrationImage"
+        app:layout_constraintVertical_bias="0.237" />
 
     <ProgressBar
         android:id="@+id/pbCountdown"
