--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,9 +12,11 @@
         android:layout_height="wrap_content"
         android:text="JOKE Chair Home Page"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.29" />
 
     <Button
         android:id="@+id/bPosturePage"
@@ -37,6 +39,18 @@
         app:layout_constraintTop_toBottomOf="@+id/bPosturePage" />
 
     <Button
+        android:id="@+id/bHistoryPage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Posture History"
+        app:layout_constraintBottom_toTopOf="@+id/bLogout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.512"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/bCalibrationPage"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <Button
         android:id="@+id/bLogout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -44,6 +58,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@id/bHistoryPage" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
